--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#663fb5">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/landio.css">
+    <link rel="stylesheet" href="stylesheets/animate.min.css">
+    <link rel="stylesheet" href="stylesheets/stylesheet.css">
   </head>
 
   <body>
