--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <div id="collapsingNavbar" class="collapse navbar-toggleable-custom" role="tabpanel" aria-labelledby="collapsingNavbar">
           <ul class="nav navbar-nav pull-right">
             <li class="nav-item nav-item-toggable active">
-              <a class="nav-link" href="http://tympanus.net/codrops/?p=25217">About Land.io <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="http://tympanus.net/codrops/?p=25217">About us <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item nav-item-toggable">
-              <a class="nav-link" href="ui-elements.html">UI Kit</a>
+              <a class="nav-link" href="ui-elements.html">Contact us</a>
             </li>
             <li class="nav-item nav-item-toggable">
-              <a class="nav-link" href="https://github.com/tatygrassini/landio-html" target="_blank">GitHub</a>
+              <a class="nav-link" href="https://github.com/tatygrassini/landio-html" target="_blank">FAQ</a>
             </li>
             <li class="nav-item nav-item-toggable hidden-sm-up">
               <form class="navbar-form">
@@ -121,9 +121,9 @@
     </nav>
     <header class="jumbotron bg-inverse text-center center-vertically" role="banner">
       <div class="container">
-        <h1 class="display-3">Land.io, blissful innovation.</h1>
-        <h2 class="m-b-lg">Craft your journey, <em>absolutely free</em>, with <a href="ui-elements.html" class="jumbolink">Land.io UI kit</a>.</h2>
-        <a class="btn btn-secondary-outline m-b-md" href="#" role="button"><span class="icon-sketch"></span>Sketch included</a>
+        <h1 class="display-3">Vincere Websites</h1>
+        <h2 class="m-b-lg"> We will make <em>you</em> an amazing website <a href="ui-elements.html" class="jumbolink">Land.io UI kit</a>.</h2>
+        <a class="btn btn-secondary-outline m-b-md" href="#" role="button"><span class="icon-sketch"></span>X</a>
         <ul class="list-inline social-share">
           <li><a class="nav-link" href="#"><span class="icon-twitter"></span> 1024</a></li>
           <li><a class="nav-link" href="#"><span class="icon-facebook"></span> 562</a></li>
@@ -376,12 +376,7 @@
                 <input type="email" class="form-control form-control-lg" id="inputEmail" placeholder="Email address" autocomplete="off">
               </div>
             </div>
-            <div class="col-md-6 col-xl-3">
-              <div class="form-group has-icon-left form-control-password">
-                <label class="sr-only" for="inputPassword">Enter a password</label>
-                <input type="password" class="form-control form-control-lg" id="inputPassword" placeholder="Enter a password" autocomplete="off">
-              </div>
-            </div>
+           
             <div class="col-md-6 col-xl-3">
               <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block">Sign up for free!</button>
@@ -390,7 +385,7 @@
           </div>
           <label class="c-input c-checkbox">
             <input type="checkbox" checked>
-            <span class="c-indicator"></span> I agree to Land.io’s <a href="#">terms of service</a>
+            <span class="c-indicator"></span> I agree to Vincere Website Design's <a href="#">terms of service</a>
           </label>
         </form>
       </div>
@@ -404,16 +399,15 @@
                 <span class="media-object icon-logo display-1"></span>
               </div>
               <small class="media-body media-bottom">
-                &copy; Land.io 2015. <br>
-                Designed by Peter Finlan, developed by Taty Grassini, exclusively for Codrops.
+                &copy; Vincere Website Design 2015 <br>
                 </small>
             </div>
           </div>
           <div class="col-md-6 col-lg-7">
             <ul class="list-inline m-b-0">
-              <li class="active"><a href="http://tympanus.net/codrops/?p=25217">About Land.io</a></li>
-              <li><a href="ui-elements.html">UI Kit</a></li>
-              <li><a href="https://github.com/tatygrassini/landio-html" target="_blank">GitHub</a></li>
+              <li class="active"><a href="http://tympanus.net/codrops/?p=25217">About us</a></li>
+              <li><a href="ui-elements.html">Contact us</a></li>
+              <li><a href="https://github.com/tatygrassini/landio-html" target="_blank">FAQ</a></li>
               <li><a class="scroll-top" href="#totop">Back to top <span class="icon-caret-up"></span></a></li>
             </ul>
           </div>
