--- a/index.html
+++ b/index.html
@@ -415,6 +415,6 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="js/landio.min.js"></script>
+    <script src="js"></script>
   </body>
 </html>
