--- a/index.html
+++ b/index.html
@@ -416,5 +416,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js"></script>
+    <script src="js.min"></script>
   </body>
 </html>
